--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,6 +14,13 @@ ja:
         id: ID
         name: 原料
         sio2: SiO2
+        tio2: TiO2
+        al2o3: Al2O3
+        fe2o3: Fe2O3
+        cao: CaO
+        mgo: MgO
+        k2o: K2O
+        na2o: Na2O
         created_at: 登録日時
         updated_at: 更新日時
   date:
